feat(workflow): TaskVersion with string-encoded Schema + kyo-test --add-opens